<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone</string>


    <string name="powitanie">
     Witaj użytkowniku! Podaj swoje dane!
    </string>
</resources>